# soroban-learn-to-earn-engine

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.agents/: rules.md
.github/workflows/: ci.yml  deploy-soroban.yml  docker-publish.yml  fullstack-ci.yml
backend/: Dockerfile  README.md  consparse_inference.py  requirements.txt  soroban_client.py  soroban_client_sdk.py
backend/app/: main.py
backend/scripts/: check_rpc.py  deploy_contract.py  record_on_chain.py  smoke_test.py
configs/: dev.yaml
consparse/: data.py  models.py  train.py
contracts/: Cargo.toml  README.md  soroban.toml
contracts/src/: lib.rs
docs/: testnet.md
examples/: README.md  call_predict.py  call_record.py
frontend/: Dockerfile  Dockerfile.prod  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx
scripts/: launch_services.py
tests/: test_backend_api.py  test_consparse.py  test_smoke.py  test_soroban_client.py  test_soroban_client_sdk.py
